--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,11 +1,9 @@
-<header class="flex justify-between">
-    <img src="" alt="profile-pic" width="100" height="100" />
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
+<header class="flex justify-between items-center w-[800px] py-10 h-16">
+    <img class="rounded-full w-12 h-12" src="https://media.licdn.com/dms/image/v2/D4D03AQFepF-z_Yugiw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1722797724620?e=1732147200&v=beta&t=xejEhqJUzCr5zuN_otp4h4DUzBrmdWCg_MBZWakhn-s" alt="profile-pic"/>
+    <nav class="flex items-center space-x-9">
+        <a href="#">Home</a></li>
+        <a href="#">About</a></li>
+        <a href="#">Projects</a></li>
+        <a href="#">Contact</a></li>
     </nav>
 </header>
