--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,9 @@
 ---
+import Header from '../components/header.astro';
+
+// Supports weights 100-900
+import '@fontsource-variable/onest';
+
 interface Props {
 	title: string;
 }
@@ -17,23 +22,25 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<header />
+		<Header />
 		<slot />
 	</body>
 </html>
 <style is:global>
 	:root {
-
+		color-scheme: light dark;
+		color: white;
 	}
 
 	html {
-		font-family: system-ui, sans-serif;
+		font-family: "Onest Variable", system-ui, sans-serif;
 	}
 
 	body {
 		display: flex;
 		justify-content: center;
-		background-color: rgb(29, 28, 28);
+		background-color: rgb(12, 12, 12);
+		min-height: 100vh;
 	}
 </style>
 
