--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '../components/header.astro';
+import Header from '../components/Header.astro';
 
 // Supports weights 100-900
 import '@fontsource-variable/onest';
@@ -38,6 +38,7 @@ const { title } = Astro.props;
 
 	body {
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
 		background-color: rgb(12, 12, 12);
 		min-height: 100vh;
