--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,66 @@
-
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Badge from '../components/Badge.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Hero">
 	<main>
+		<section class="w-full lg:w-[700px] mx-auto py-28">
+
+			<img class="rounded-full w-40 h-40 mb-10" src="https://media.licdn.com/dms/image/v2/D4D03AQFepF-z_Yugiw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1722797724620?e=1732147200&v=beta&t=xejEhqJUzCr5zuN_otp4h4DUzBrmdWCg_MBZWakhn-s" alt="profile-pic"/>
+
+			<h1 class="text-6xl font-bold mb-5">Hi, I'm 
+				<span class="inline-block animate-rainbow bg-gradient-to-r from-red-500 via-yellow-500 to-purple-500 text-transparent bg-clip-text">Sebastián Rodríguez</span>
+				<span class="inline-block animate-wave">👋</span>
+			</h1>
+			<h2 class="text-4xl mb-5 opacity-65">I'm a <span>Software Developer</span></h2>
+			<p>
+				Since I was a <span>kid</span>, <span>computers</span> always fascinated
+				me. I could spend hours exploring them, and over time, 
+				that <span>curiosity</span> led me to discover the world of <span>web 
+				development</span>. What started as simple experiments eventually 
+				became my <span>passion</span>.
+			</p>
+			<p>
+				Nowadays, I've had the opportunity to work on projects ranging from an 
+				<span>AI chatbot</span> for businesses to <span>mobile apps</span>, and <span>Taskies</span>, 
+				a web app designed to organize notes into different folders and <span>workspaces</span>. 
+				My main focus is on creating <span>efficient solutions</span> that provide a seamless <span>user experience</span>. 
+				While I frequently use technologies like <span>React</span>, <span>Tailwind</span>, and <span>SQL</span>, 
+				I'm always on the lookout for <span>new tools</span> to expand my skillset and elevate my projects.
+			</p>
+			<p>
+				What I enjoy the most about the process is the moment when, after hours or even days of problem-solving, 
+				everything finally <span>clicks</span>. I also love blending <span>simple yet attractive design</span> with solid code. 
+				When I'm not coding, you can usually find me <span>playing volleyball</span>, <span>training at the gym</span>, 
+				or <span>learning a new skill</span>.
+			</p>
+		</section>
 	</main>
 </Layout>
+
+<style>
+	@keyframes rainbow {
+		0%, 100% {
+			background-size: 200% 200%;
+			background-position: left center;
+		}
+		50% {
+			background-size: 200% 200%;
+			background-position: right center;
+		}
+	}
+	@keyframes wave {
+		0%, 100% { transform: rotate(0deg); }
+		25% { transform: rotate(20deg); }
+		75% { transform: rotate(-15deg); }
+	}
+	.animate-rainbow {
+		animation: rainbow 6s linear infinite;
+	}
+	.animate-wave {
+		animation: wave 2s infinite;
+		transform-origin: 70% 70%;
+	}
+</style>
