--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Carousel from '../components/Carousel.astro';
 ---
 
 <Layout title="Hero">
 	<main>
-		<section class="w-full lg:w-[700px] mx-auto py-28">
+		<section class="w-full lg:w-[700px] mx-auto pt-28 pb-4">
 
 			<img class="rounded-full w-40 h-40 mb-10" src="https://media.licdn.com/dms/image/v2/D4D03AQFepF-z_Yugiw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1722797724620?e=1732147200&v=beta&t=xejEhqJUzCr5zuN_otp4h4DUzBrmdWCg_MBZWakhn-s" alt="profile-pic"/>
 
@@ -27,7 +27,8 @@ import Card from '../components/Card.astro';
 				a web app designed to organize notes into different folders and <span class="">workspaces</span>. 
 				My main focus is on creating <span class="">efficient solutions</span> that provide a seamless <span class="">user experience</span>. 
 			</p>
-		</section>
+	</section>
+	<Carousel />
 	</main>
 </Layout>
 
