Add title and description of the page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Carousel from '../components/Carousel.astro';
 ---
 
-<Layout title="Hero">
+<Layout title="Portfolio Sebastián Rodríguez - Software Developer">
 	<main>
 		<section class="w-full lg:w-[700px] mx-auto pt-28 pb-4">
 
