Fix description from appearing in the screen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Carousel from '../components/Carousel.astro';
 ---
 
-<Layout title="Portfolio Sebastián Rodríguez - Software Developer">
+<Layout title="Portfolio Sebastián Rodríguez - Software Developer" description="If you're looking for a software developer, I'm your guy. I'm a passionate and creative individual looking for new challenges and opportunities to grow my skills and knowledge.">
 	<main>
 		<section class="w-full lg:w-[700px] mx-auto pt-28 pb-4">
 
