--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,3 +1,7 @@
-<section class="w-full lg:w-[700px] mx-auto pt-28 pb-4">
+---
+    const { class: className } = Astro.props;
+---
+
+<section class=`w-full lg:w-[700px] mx-auto pt-28 pb-4 ${className}`>
     <slot />
 </section>
