Modify nav bar to navigate in the page

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,14 +4,14 @@ import Badge from '../components/Badge.astro';
 
 <header class="items-center"> 
     <nav class="flex flex-row gap-x-10 items-center opacity-70 justify-between py-5 w-[700px] mx-auto">
-        <a href="#">Home</a></li>
-        <a href="#">About</a></li>
+        <a href="#top">Home</a></li>
+        <a href="#about-me">About</a></li>
         <div class="flex items-center justify-center animate-pulse">
             <a href="https://www.linkedin.com/in/sebast%C3%ADan-rodr%C3%ADguez-6111a1301/" target="_blank" rel="noopener noreferrer">
                 <Badge>Available</Badge>
             </a>
         </div>
-        <a href="#">Projects</a></li>
-        <a href="#">Contact</a></li>
+        <a href="#projects">Projects</a></li>
+        <a href="#contact">Contact</a></li>
     </nav>
 </header>
