--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -1,7 +1,7 @@
 ---
-    const { class: className } = Astro.props;
+    const { class: className, id } = Astro.props;
 ---
 
-<section class=`w-full lg:w-[700px] mx-auto pt-28 pb-4 ${className}`>
+<section id={id} class=`w-full lg:w-[700px] mx-auto pt-28 pb-4 ${className}`>
     <slot />
 </section>
