--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Container from '../components/Container.astro';
 
 <Layout title="Portfolio Sebastián Rodríguez - Software Developer" description="If you're looking for a software developer, I'm your guy. I'm a passionate and creative individual looking for new challenges and opportunities to grow my skills and knowledge.">
 	<main>
-		<Container class="pt-14">
+		<Container id="top" class="pt-14">
 
 			<img class="rounded-full w-40 h-40 mb-10" src="https://media.licdn.com/dms/image/v2/D4D03AQFepF-z_Yugiw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1722797724620?e=1732147200&v=beta&t=xejEhqJUzCr5zuN_otp4h4DUzBrmdWCg_MBZWakhn-s" alt="profile-pic"/>
 
@@ -16,7 +16,7 @@ import Container from '../components/Container.astro';
 			</h1>
 
 			<h2 class="text-4xl mb-5 opacity-65">I'm a <span>Software Developer</span></h2>
-			
+
 			<p class="mb-6 text-lg leading-relaxed text-zinc-50 dark:text-gray-300 dark:bg-gray-800  rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
 				Since I was a kid, <span class="font-semibold text-purple-600 dark:text-blue-100 animate-pulse">computers</span> 💻 always fascinated
 				me. I could spend hours exploring them, and over time, 
