--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 // Supports weights 100-900
 import '@fontsource-variable/onest';
@@ -31,6 +32,7 @@ const { title, description } = Astro.props;
 		<div class="opacity-35 fixed top-0 z-[-2] h-screen w-screen bg-[#000000] bg-[radial-gradient(#ffffff33_1px,#00091d_1px)] bg-[size:20px_20px]"></div>
 		<Header />
 		<slot />
+		<Footer />
 		
 	</body>
 </html>
