Modify padding modifications inside the Container

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Container from '../components/Container.astro';
 
 <Layout title="Portfolio Sebastián Rodríguez - Software Developer" description="If you're looking for a software developer, I'm your guy. I'm a passionate and creative individual looking for new challenges and opportunities to grow my skills and knowledge.">
 	<main>
-		<Container id="top" class="pt-14">
+		<Container id="top" class="pt-24 pb-4">
 
 			<img class="rounded-full w-40 h-40 mb-10" src="https://media.licdn.com/dms/image/v2/D4D03AQFepF-z_Yugiw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1722797724620?e=1732147200&v=beta&t=xejEhqJUzCr5zuN_otp4h4DUzBrmdWCg_MBZWakhn-s" alt="profile-pic"/>
 
@@ -32,7 +32,7 @@ import Container from '../components/Container.astro';
 			</p>
 		</Container>
 
-	<Container class="pt-1">
+	<Container class="pt-4 pb-4">
 		<Carousel />
 	</Container>
 
