--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -2,6 +2,6 @@
     const { class: className, id } = Astro.props;
 ---
 
-<section id={id} class=`w-full lg:w-[700px] mx-auto pt-28 pb-4 ${className}`>
+<section id={id} class=`w-full lg:w-[700px] mx-auto ${className}`>
     <slot />
 </section>
