--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,7 +3,7 @@ import Badge from '../components/Badge.astro';
 ---
 
 <header class="items-center"> 
-    <nav class="flex flex-row gap-x-10 items-center opacity-70 justify-between py-5 w-[700px] mx-auto">
+    <nav class="flex flex-row gap-x-10 items-center opacity-70 justify-between py-5 w-full lg:w-[700px] mx-auto lg:px-20">
         <a href="#top">Home</a></li>
         <a href="#about-me">About</a></li>
         <div class="flex items-center justify-center animate-pulse">
