--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,11 +39,11 @@ import Projects from '../components/Projects.astro';
 	</Container>
 
 	<Container>
-		<h2 class="text-4xl mb-6 flex items-center gap-x-2 opacity-70">
+		<h2 class="text-4xl mt-10 mb-6 flex items-center gap-x-2 opacity-70">
 			<CodingSVG />
-			Projectss
+			Projects
 		</h2>
-		<Projects />
+		<Projects/>
 
 	</Container>
 
