--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,14 @@
-<footer class="flex flex-col items-center justify-center py-10 text-center text-zinc-600">
-    Footer @SebastiánRodríguez
+<footer class="mt-20 bg-transparent backdrop-blur-lg rounded-lg shadow m-4 w-full lg:w-[800px] mx-auto">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://www.linkedin.com/in/sebast%C3%ADan-rodr%C3%ADguez-6111a1301/" class="hover:underline">Sebastián Rodríguez</a>. All Rights Reserved.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-300  sm:mt-0">
+        <li>
+            <a href="#" class="hover:underline me-4 md:me-6">About Me</a>
+        </li>
+        <li>
+            <a href="#" class="hover:underline">Contact</a>
+        </li>
+    </ul>
+    </div>
 </footer>
