Modify navbar to make it fix in the screen

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Projects from '../components/Projects.astro';
 		<Carousel />
 	</Container>
 
-	<Container>
+	<Container id="projects">
 		<h2 class="text-4xl mt-10 mb-6 flex items-center gap-x-2 opacity-70">
 			<CodingSVG />
 			Projects
