--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Carousel from '../components/Carousel.astro';
 import Container from '../components/Container.astro';
 import CodingSVG from '../components/icons/CodingSVG.astro';
 import Projects from '../components/Projects.astro';
+import About from '../components/About.astro';
 ---
 
 <Layout title="Portfolio Sebastián Rodríguez - Software Developer" description="If you're looking for a software developer, I'm your guy. I'm a passionate and creative individual looking for new challenges and opportunities to grow my skills and knowledge.">
@@ -27,24 +28,28 @@ import Projects from '../components/Projects.astro';
 				became my <span class="font-bold inline-block animate-rainbow bg-gradient-to-r from-red-500 via-yellow-500 to-purple-500 text-transparent bg-clip-text">passion</span>.
 			</p>
 			<p class="mb-6 text-lg leading-relaxed text-zinc-50 dark:text-gray-300 dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-300">
-				Nowadays, I've had the opportunity to work on projects ranging from an 
-				<span class="font-semibold text-green-600 dark:text-green-400"><a href="#">AI chatbot</a></span> for businesses to <span class="font-semibold text-yellow-600 dark:text-yellow-400"><a href="#">mobile apps</a></span>, and <span class="font-semibold text-red-600 dark:text-red-400"><a href="#">Taskies</a></span>, 
-				a web app designed to organize notes into different folders and <span class="">workspaces</span>. 
-				My main focus is on creating <span class="">efficient solutions</span> that provide a seamless <span class="">user experience</span>. 
-			</p>
+				My main focus is on creating <span class="font-semibold text-yellow-300 dark:text-yellow-400 underline decoration-wavy decoration-pink-300">efficient solutions</span> that provide a seamless <span class="font-semibold text-blue-300 dark:text-blue-400 underline decoration-wavy decoration-indigo-300">user experience</span>.
+			</p>			
 		</Container>
 
 	<Container class="pt-4 pb-4">
 		<Carousel />
 	</Container>
 
-	<Container id="projects">
+	<Container id="projects" class="pt-8 pb-8">
 		<h2 class="text-4xl mt-10 mb-6 flex items-center gap-x-2 opacity-70">
 			<CodingSVG />
 			Projects
 		</h2>
 		<Projects/>
+	</Container>
 
+	<Container id="about-me" class="pt-8 pb-8">
+		<About />
+	</Container>
+
+	<Container id="contact" class="pt-4 pb-4">
+		
 	</Container>
 
 	</main>
