--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Container from '../components/Container.astro';
 import CodingSVG from '../components/icons/CodingSVG.astro';
 import Projects from '../components/Projects.astro';
 import About from '../components/About.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Portfolio Sebastián Rodríguez - Software Developer" description="If you're looking for a software developer, I'm your guy. I'm a passionate and creative individual looking for new challenges and opportunities to grow my skills and knowledge.">
@@ -48,8 +49,8 @@ import About from '../components/About.astro';
 		<About />
 	</Container>
 
-	<Container id="contact" class="pt-4 pb-4">
-		
+	<Container id="contact" class="pt-8">
+		<Contact />
 	</Container>
 
 	</main>
