--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -7,7 +7,7 @@
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold text-center mb-8 text-gray-300 ">Contact</h2>
       <div class="max-w-2xl mx-auto">
-        <form class="space-y-6">
+        <form class="space-y-6" action="https://formspree.io/f/xzzbpoag" method="POST">
           <div>
             <label for="name" class="block text-sm font-medium text-gray-400">Name</label>
             <input type="text" id="name" name="name" required class="mt-1 block w-full px-3 py-2 bg-gray-800 rounded-md shadow-sm focus:outline-none sm:text-sm" />
