--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,14 +4,14 @@ import Badge from '../components/icons/Badge.astro';
 
 <header class="fixed top-4 left-0 right-0 z-50 flex justify-center items-center">
     <nav class="flex flex-row gap-x-6 sm:gap-x-10 items-center justify-between py-2 px-4 rounded-full bg-white/20 dark:bg-gray-800/20 backdrop-blur-md">
-        <a href="#top" class="text-gray-300 hover:text-yellow-500 transition-colors">Home</a>
-        <a href="#projects" class="text-gray-300 hover:text-yellow-500 transition-colors">Projects</a>
+        <a href="/#top" class="text-gray-300 hover:text-yellow-500 transition-colors">Home</a>
+        <a href="/#projects" class="text-gray-300 hover:text-yellow-500 transition-colors">Projects</a>
         <div class="flex items-center justify-center">
             <a href="https://www.linkedin.com/in/sebast%C3%ADan-rodr%C3%ADguez-6111a1301/" target="_blank" rel="noopener noreferrer" class="animate-pulse">
                 <Badge>Available</Badge>
             </a>
         </div>
-        <a href="#about-me" class="text-gray-300 hover:text-yellow-500 transition-colors">About</a>
-        <a href="#contact" class="text-gray-300 hover:text-yellow-500 transition-colors">Contact</a>
+        <a href="/#about-me" class="text-gray-300 hover:text-yellow-500 transition-colors">About</a>
+        <a href="/#contact" class="text-gray-300 hover:text-yellow-500 transition-colors">Contact</a>
     </nav>
 </header>
